# ptCollage

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  pxtoneProjectT.sln
Generic/: CMakeLists.txt  Generic.vcproj  Generic.vcxproj  Generic.vcxproj.filters  Japanese.cpp  Japanese.h  KeyControl.cpp  KeyControl.h  Menu_HistoryW.cpp  Menu_HistoryW.h  MessageBox.cpp  MessageBox.h  OpenVolumeControl.cpp  OpenVolumeControl.h  TriggerFile.cpp  cls_ExistingWindow.cpp  cls_ExistingWindow.h  if_Generic.cpp  if_Generic.h  if_gen_Scroll.cpp  if_gen_Scroll.h  pxMidiIn.cpp  pxMidiIn.h
Generic/StdAfx/: StdAfx.h
lpng/: CMakeLists.txt  lpng version.txt  lpng.vcxproj  lpng.vcxproj.filters  pngstruct.h
ptCollage/: ActiveTone.cpp  ActiveTone.h  CMakeLists.txt  Generic.cpp  JapaneseTable.cpp  JapaneseTable.h  Main.cpp  MainProc.cpp  MidiInput.cpp  MidiInput.h  Project.cpp  Project.h  ProjectFile.cpp  ScopeEvent.cpp  ScopeEvent.h  Script.rc  UndoEvent.cpp  UndoEvent.h  Unit.cpp  Unit.h  UnitFocus.cpp  UnitFocus.h  Woice.cpp  Woice.h  WoiceFocus.cpp  WoiceFocus.h  ptCollage.h  ptCollage.vcproj  ptCollage.vcxproj  ptCollage.vcxproj.filters  pxtoneProject.cpp  resource.h
ptCollage/StdAfx/: StdAfx.h
ptCollage/dialog/: dlg_About.cpp  dlg_AddUnit.cpp  dlg_AddUnit.h  dlg_BuildOption.cpp  dlg_BuildProgress.cpp  dlg_BuildProgress.h  dlg_Comment.cpp  dlg_Config.cpp  dlg_CopyMeas.cpp  dlg_Delay.cpp  dlg_Delay.h  dlg_EventVolume.cpp  dlg_EventVolume.h  dlg_OverDrive.cpp  dlg_OverDrive.h  dlg_Project.cpp  dlg_Property.cpp  dlg_Scope.cpp  dlg_Unit.cpp  dlg_Woice.cpp  dlg_YesNo.cpp
ptCollage/interface/: Interface.cpp  Interface.h  SurfaceNo.h  if_BaseField.cpp  if_BaseField.h  if_Copier.cpp  if_Copier.h  if_Cursor.cpp  if_Cursor.h  if_Cursor_Copier.cpp  if_Cursor_Effector.cpp  if_Cursor_KeyField.cpp  if_Cursor_Keyboard.cpp  if_Cursor_Menu_Division.cpp  if_Cursor_Menu_Play.cpp  if_Cursor_Menu_Scope.cpp  if_Cursor_Menu_Unit.cpp  if_Cursor_Menu_Woice.cpp  if_Cursor_Menu_Zoom.cpp  if_Cursor_Panel_Comment.cpp  if_Cursor_Panel_Rack.cpp  if_Cursor_Panel_Scale.cpp  if_Cursor_PlayField.cpp  if_Cursor_Player.cpp  if_Cursor_Projector.cpp  if_Cursor_ScopeField.cpp  if_Cursor_Tenkey_Correct.cpp  if_Cursor_ToolPanel.cpp  if_Cursor_UnitField.cpp  if_Cursor_UnitTray.cpp  if_Cursor_VolumeField.cpp  if_Cursor_VolumePanel.cpp  if_Cursor_WoiceTray.cpp  if_Effector.cpp  if_Effector.h  if_Free.cpp  if_Free.h  if_KeyField.cpp  if_KeyField.h  if_Keyboard.cpp  (+55 more)
ptConfig/: CMakeLists.txt  ptConfig.cpp  ptConfig.h  ptConfig.vcproj  ptConfig.vcxproj  ptConfig.vcxproj.filters  ptConfig_Build.cpp  ptConfig_Build.h  ptConfig_DlgCtrl.cpp  ptConfig_DlgCtrl.h  ptConfig_Font.cpp  ptConfig_Font.h  ptConfig_MIDI.cpp  ptConfig_MIDI.h  ptConfig_Stream.cpp  ptConfig_Stream.h
ptConfig/StdAfx/: StdAfx.cpp  StdAfx.h
ptDroptolist/: Main.cpp  Script.rc  ptDroptolist.vcproj  ptDroptolist.vcxproj  ptDroptolist.vcxproj.filters  resource.h  thrd_Search.cpp
ptDroptolist/StdAfx/: StdAfx.h
ptNoise/: CMakeLists.txt  JapaneseTable.cpp  Main.cpp  MainProc.cpp  NoiseTable.cpp  NoiseTable.h  PcmTable.cpp  PcmTable.h  ptNoise.h  ptNoise.vcproj  ptNoise.vcxproj  ptNoise.vcxproj.filters  resource.h  script.rc
ptPlayer/: CMakeLists.txt  Call_ptCollage.cpp  Call_ptCollage.h  JapaneseTable.cpp  Main.cpp  Tune.cpp  Tune.h  ptPlayer.vcproj  ptPlayer.vcxproj  ptPlayer.vcxproj.filters  resource.h  script.rc
ptVoice/: CMakeLists.txt  CursorKeyCtrl.cpp  CursorKeyCtrl.h  Japanese.cpp  JapaneseTable.cpp  JapaneseTable.h  Main.cpp  MainProc.cpp  MidiInput.cpp  MidiInput.h  VoiceFile.cpp  VoiceFile.h  WoiceUnit.cpp  WoiceUnit.h  WoiceUnit_csv.cpp  history.txt  ptVoice.cpp  ptVoice.h  ptVoice.vcproj  ptVoice.vcxproj  ptVoice.vcxproj.filters  ptvVelocity.cpp  ptvVelocity.h  resource.h  script.rc
pxCommon/: CMakeLists.txt  pxStdDef.h
pxWindows/: CMakeLists.txt  pxWindows.vcxproj  pxWindows.vcxproj.filters  pxwAlteration.cpp  pxwAlteration.h  pxwAppEtc.cpp  pxwAppEtc.h  pxwDirectory.cpp  pxwDirectory.h  pxwDlg_SelFile.cpp  pxwDlg_SelFile.h  pxwDx09Draw.cpp  pxwDx09Draw.h  pxwFile.cpp  pxwFile.h  pxwFilePath.cpp  pxwFilePath.h  pxwGlyph1.cpp  pxwGlyph1.h  pxwMutex.cpp  pxwMutex.h  pxwPathDialog.cpp  pxwPathDialog.h  pxwTextOverride.cpp  pxwTextOverride.h  pxwThread.cpp  pxwThread.h  pxwUTF8.cpp  pxwUTF8.h  pxwWindowRect.cpp  pxwWindowRect.h  pxwXA2stream.cpp  pxwXA2stream.h  pxwXA2unit.cpp  pxwXA2unit.h  pxwXAudio2.cpp  pxwXAudio2.h  pxwXAudio2Keep.cpp  pxwXAudio2Keep.h
pxWindows/StdAfx/: StdAfx.h
pxWorks/: CMakeLists.txt  pxCSV2.cpp  pxCSV2.h  pxDateTime.cpp  pxDateTime.h  pxDebugLog.cpp  pxDebugLog.h  pxDescriptor.cpp  pxDescriptor.h  pxDirectory.cpp  pxDirectory.h  pxError.cpp  pxError.h  pxFile2.cpp  pxFile2.h  pxFontParam.cpp  pxFontParam.h  pxLocalize.cpp  pxLocalize.h  pxMem.cpp  pxMem.h  pxMouse.cpp  pxMouse.h  pxMutex.cpp  pxMutex.h  pxOggVorbis.cpp  pxOggVorbis.h  pxPalette.cpp  pxPalette.h  pxPath.cpp  pxPath.h  pxPlayPCM.cpp  pxPlayPCM.h  pxPlaySampler.cpp  pxPlaySampler.h  pxRiffWav.cpp  pxRiffWav.h  pxShiftJIS.cpp  pxShiftJIS.h  pxStr.cpp  (+14 more)
pxWorks/StdAfx/: StdAfx.h
pxWrapper/: CMakeLists.txt  pxWrapper.vcxproj  pxWrapper.vcxproj.filters  pxwrAppEtc.cpp  pxwrAppEtc.h  pxwrDirectory.cpp  pxwrDirectory.h  pxwrMouse.cpp  pxwrMouse.h  pxwrMutex.cpp  pxwrMutex.h
pxWrapper/StdAfx/: StdAfx.h
pxtone/: CMakeLists.txt  pxtn.h  pxtnData.cpp  pxtnPulse_Noise.cpp  pxtnPulse_NoiseBuilder.cpp  pxtnPulse_Oggv.cpp  pxtone.vcxproj  pxtone.vcxproj.filters
pxtoneTool/: CMakeLists.txt  HearSelect.cpp  HearSelect.h  Japanese.cpp  Japanese.h  Main.cpp  Script.rc  pxtoneTool.h  pxtoneTool.vcproj  pxtoneTool.vcxproj  pxtoneTool.vcxproj.filters  resource.h
pxtoneTool/StdAfx/: StdAfx.h
pxtonewin/: CMakeLists.txt  pxtonewin.vcproj  pxtonewin.vcxproj  pxtonewin.vcxproj.filters  pxtonewinWoice.cpp  pxtonewinWoice.h  pxtonewinXA2.cpp  pxtonewinXA2.h  pxtonewinXA2_tune.cpp  pxtonewinXA2_voice.cpp
vorbis/: CMakeLists.txt  vorbis.vcxproj  vorbis.vcxproj.filters
zlib/: CMakeLists.txt  zlib version.txt  zlib.vcxproj  zlib.vcxproj.filters
(+97 files in other folders)
